framework/tests/framework/ResolveError.java
// warning: Javac errored; type checking halted.
public class ResolveError {
    void m() {
        // :: error: cannot find symbol
        Unresolved.foo();
    }
}
